Clean up README URLs
- removed unused URLs from markdown
- added ngrok instructions to head of config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,17 @@
-#baseURL = "https://thoughtcraft.net"
-baseURL = "/"
+# To launch locally and display draft documents
+#
+#   hugo server -D
+#
+# To launch behind an ngrok proxy (https://ngrok.com/)
+#
+#   # launch ngrok to set up proxy and generate base URL
+#   ngrok http 1313
+#   ...
+#   # use the generated ngrok URL for the hugo base URL
+#   hugo server --appendPort=false -b https://NGROK_URL
+#
+
+baseURL = "https://thoughtcraft.net"
 title = "Thoughtcraft"
 author = "Matt Phillips"
 paginate = 3
